Fixed Cards on Mobile Landscape

--- a/css/brief.css
+++ b/css/brief.css
@@ -383,3 +383,9 @@ body.modal-open {
     max-width: 100%;
     max-height: 100%;
 }
+
+@media only screen and (max-height: 400px) {
+    .card-image {
+        display: none;
+    }
+}
